--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>solana-signal-sniper-bot</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Pumpfun Copy Trading Bot</title>
+    <meta name="description" content="AHK780 Generated Project" />
+    <meta name="author" content="AHK780" />
 
-    <meta property="og:title" content="solana-signal-sniper-bot" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Pumpfun Copy Trading Bot" />
+    <meta property="og:description" content="AHK780 Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/ahk780/pumpfun-copy-trading-bot/refs/heads/main/public/ahk780-solana-wizard.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ahk780" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/ahk780/pumpfun-copy-trading-bot/refs/heads/main/public/ahk780-solana-wizard.jpg" />
   </head>
 
   <body>
